--- a/src/common/styles.css
+++ b/src/common/styles.css
@@ -16,6 +16,11 @@ body {
 	height: 100%;
 	top: 0;
 	left: 0;
+	transition: all 1s;
+	opacity: 1;
+}
+#main.hidden {
+	opacity: 0;
 }
 .item {
 	position: absolute;
