--- a/templates/map-draft-vertical-winner/styles.css
+++ b/templates/map-draft-vertical-winner/styles.css
@@ -19,7 +19,7 @@
     max-width: 170px;
 }
 .map-entry.Past .map-img {
-    filter: grayscale(100%) brightness(50%);
+    filter: grayscale(50%) brightness(50%);
 }
 .map-entry.Past .map-name {
     color: #ddd;
@@ -30,11 +30,30 @@
     height: 30px;
 }
 
+@keyframes flash {
+    0% { opacity: 0 }
+    100% { opacity: 1 }
+}
 .map-entry.Current .pre {
-    background: linear-gradient(0deg, rgba(255,180,18,1) 30%, rgba(0,0,0,0) 100%);
+    background: linear-gradient(0deg, rgba(230,150,18,1) 30%, rgba(0,0,0,0) 100%);
+    animation: flash 1.25s linear infinite alternate;
 }
 .map-entry.Current .post {
-    background: linear-gradient(180deg, rgba(255,180,18,1) 30%, rgba(0,0,0,0) 100%);
+    background: linear-gradient(180deg, rgba(230,150,18,1) 30%, rgba(0,0,0,0) 100%);
+    animation: flash 1.25s linear infinite alternate;
+}
+.map-entry.Current .entry::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    box-shadow: inset 0 5px 25px rgba(230,150,18,1);
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    animation: flash 1s linear infinite alternate;
+}
+.map-entry:not(.Past):not(.Current) img {
+    opacity: 0.4;
 }
 
 .entry {
@@ -42,7 +61,7 @@
     height: 285px;
     background-color: #DA7E39;
     overflow: hidden;
-    border: 4px solid #FC9142;
+    border: 4px solid #d4712a;
 }
 
 .map-img {
@@ -52,7 +71,7 @@
     transform: translate(-50%, 0);
 }
 
-.map-name {
+.map-name:not(.empty) {
     writing-mode: vertical-rl;
     position: absolute;
     color: white;
@@ -61,8 +80,22 @@
     font-size: 2.2em;
     font-weight: 900;
     -webkit-text-stroke: 1px rgba(0, 0, 0, 0.7);
+    text-shadow: 2px 0 rgba(0,0,0,1);
     line-height: 1;
     transform: rotate(180deg);
+}
+.map-name.empty::before {
+    content: '?';
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 16em;
+    color: rgba(255, 180, 18, 0.1);
+    opacity: 0;
+}
+.map-entry.Current .map-name.empty::before {
+    animation: flash 1s linear infinite alternate;
 }
 
 .winner-name {
