--- a/templates/map-draft-vertical-winner/styles.css
+++ b/templates/map-draft-vertical-winner/styles.css
@@ -79,8 +79,7 @@
     left: 0;
     font-size: 2.2em;
     font-weight: 900;
-    -webkit-text-stroke: 1px rgba(0, 0, 0, 0.7);
-    text-shadow: 2px 0 rgba(0,0,0,1);
+    text-shadow: -1px -1px 1px #000,0 -1px 1px #000, 1px -1px 1px #000, 1px 0 1px #000, 1px 1px 1px #000, 0 1px 1px #000, -1px 1px 1px #000, -1px 0 1px #000;
     line-height: 1;
     transform: rotate(180deg);
 }
@@ -106,7 +105,11 @@
     right: 0;
     font-size: 2em;
     font-weight: 900;
-    /*-webkit-text-stroke: 1px rgba(0, 0, 0, 0.7);*/
+    text-shadow: -1px -1px 1px #000,0 -1px 1px #000, 1px -1px 1px #000, 1px 0 1px #000, 1px 1px 1px #000, 0 1px 1px #000, -1px 1px 1px #000, -1px 0 1px #000;
     line-height: 1;
     transform: rotate(180deg);
+    height: calc(100% - 25px);
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
