--- a/src/common/styles.css
+++ b/src/common/styles.css
@@ -65,3 +65,18 @@ body {
 .table-inner {
     position: relative;
 }
+
+/* Animation details. */
+#container img {
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+.table-inner img {
+	width: 100%;
+	opacity: 1;
+	transition: opacity 1s;
+}
+.table-inner img.fade-in {
+	opacity: 0;
+}
