--- a/templates/lobby/styles.css
+++ b/templates/lobby/styles.css
@@ -188,6 +188,24 @@ body {
     flex-direction: row;
 }
 
+#lobby-info {
+    width: 400px;
+    position: absolute;
+    left: calc(50% - 150px);
+    top: 745px;
+    font-size: 30px;
+    transform: translate(-50%, 0);
+    color: white;
+    text-shadow: 0px 0px 4px rgba(0,0,0,1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    line-height: 1.2;
+}
+#timer-output {
+    font-size: 50px;
+}
+
 .talent {
     font-size: 30px;
     color: white;
