--- a/templates/lobby/styles.css
+++ b/templates/lobby/styles.css
@@ -11,7 +11,7 @@ body {
 
 .round-info {
     position: absolute;
-    top: 270px;
+    top: 255px;
     display: flex;
     flex-direction: row;
     width: calc(100% - 300px);
@@ -29,15 +29,18 @@ body {
 
 .map-draft, .civ-draft {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 .civ-draft {
     gap: 8px;
-    max-height: 510px;
+    max-width: 580px;
 }
 .map-draft .map.used, .civ-draft .civ.used {
     filter: grayscale(30%) brightness(60%);
     opacity: 0.75;
+}
+.map-draft .map {
+    zoom: 0.9;
 }
 
 .draft {
@@ -45,22 +48,28 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;
-    top: 200px;
+    gap: 4px;
+    top: 150px;
+    flex-direction: column;
 }
 .draft.left {
     left: 5px;
-    flex-direction: row;
+    align-items: flex-end;
 }
 .draft.right {
     right: 310px;
+    align-items: flex-start;
+}
+.draft.left .map-draft {
     flex-direction: row-reverse;
 }
 .draft.left .civ-draft {
+    flex-direction: row-reverse;
     flex-wrap: wrap;
 }
 .draft.right .civ-draft {
-    flex-wrap: wrap-reverse;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .map-img {
@@ -141,7 +150,7 @@ body {
 
 .games {
     position: absolute;
-    top: 325px;
+    top: 760px;
     left: calc(50% - 150px);
     transform: translateX(-50%);
     display: flex;
@@ -149,7 +158,7 @@ body {
 }
 .game {
     position: relative;
-    margin: 0 30px;
+    margin: 0 25px;
     height: 110px;
 }
 .game .left-civ {
@@ -180,18 +189,20 @@ body {
 
 .current-game {
     position: absolute;
-    top: 600px;
+    top: 525px;
     left: calc(50% - 150px);
     transform: translate(-50%, -50%) scale(2.5);
     display: flex;
     flex-direction: row;
+}
+#main.cams-3 .current-game {
+    display: none;
 }
 
 #lobby-info {
     width: 400px;
     position: absolute;
     left: calc(50% - 150px);
-    top: 745px;
     font-size: 30px;
     transform: translate(-50%, 0);
     color: white;
@@ -201,6 +212,12 @@ body {
     align-items: center;
     line-height: 1.2;
 }
+#main.cams-2 #lobby-info {
+    top: 665px;
+}
+#main.cams-3 #lobby-info {
+    top: 310px;
+}
 #timer-output {
     font-size: 50px;
 }
@@ -209,9 +226,4 @@ body {
     font-size: 30px;
     color: white;
     text-shadow: 0px 0px 4px rgba(0,0,0,1);
-}
-
-/* handle large series */
-.games-container.maps-9 .game {
-    zoom: 0.8;
 }
