--- a/templates/triple-webcam/styles.css
+++ b/templates/triple-webcam/styles.css
@@ -8,6 +8,8 @@ body {
     color: white;
     text-shadow: 0px 0px 4px rgba(0,0,0,1);
     height: 40px;
+    align-items: flex-start;
+    text-align: center;
 }
 
 .talent.left {
