--- a/src/common/styles.css
+++ b/src/common/styles.css
@@ -70,3 +70,7 @@ body {
     0% { opacity: 0 }
     100% { opacity: 1 }
 }
+@keyframes subtle-expand {
+	0% { transform: scale(1); }
+	100% { transform: scale(1.03); }
+}
