--- a/templates/realms-maps/styles.css
+++ b/templates/realms-maps/styles.css
@@ -47,6 +47,28 @@ body {
     left: 0;
     width: 100%;
 }
+.map.not-used .highlight {
+    display: none;
+}
+.map.used .highlight {
+    display: block;
+    border-radius: 100%;
+    background-color: #EC962A;
+    filter: blur(8px);
+    width: 80%;
+    height: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    top: 50%;
+    z-index: -1;
+    opacity: 1;
+}
+
+#maps-container.started .map.not-used {
+    filter: grayscale(40%) brightness(80%);
+    opacity: 0.9;
+}
 
 .map-img {
     width: 90%;
@@ -64,11 +86,6 @@ body {
     line-height: 0.9em;
     font-size: 1.4em;
     text-shadow: 0px 0px 4px rgba(0,0,0,1);
-}
-
-.map.not-used {
-    filter: grayscale(40%) brightness(40%);
-    opacity: 0.85;
 }
 
 .map-box {
