--- a/src/common/styles.css
+++ b/src/common/styles.css
@@ -66,6 +66,11 @@ body {
     position: relative;
 }
 
+.image > img {
+	width: 100%;
+	height: 100%;
+}
+
 @keyframes flash {
     0% { opacity: 0 }
     100% { opacity: 1 }
