update lobby to MoR-style, better vars in css, some brackets, head-to-head, support for webm to some degree

--- a/src/common/styles.css
+++ b/src/common/styles.css
@@ -81,5 +81,9 @@ body {
 }
 @keyframes less-subtle-expand {
 	0% { transform: scale(1); }
+	100% { transform: scale(1.05); }
+}
+@keyframes even-less-subtle-expand {
+	0% { transform: scale(1); }
 	100% { transform: scale(1.06); }
 }
