--- a/templates/realms-lobby/styles.css
+++ b/templates/realms-lobby/styles.css
@@ -1,29 +1,3 @@
-* {
-    --sponsor-height: 40px; /* 60px for MoR */
-
-    --round-info-top: calc(230px + var(--sponsor-height));
-    --round-info-left: 50px;
-    --round-info-font-size: 25px;
-
-    --lobby-info-top: var(--round-info-top);
-    --lobby-info-left: 1290px;
-    --lobby-info-font-size: var(--round-info-font-size);
-    
-    --games-top: calc(430px + var(--sponsor-height));
-    --game-finished-filter: grayscale(20%) brightness(50%);
-    --game-finished-opacity: 0.9;
-    --highlight-color: rgba(0, 0, 0, 0.85);
-    --highlight-blur: 25px;
-    --highlight-size: 95%;
-    --highlight-animation: less-subtle-expand;
-
-    --text-shadow: var(--strong-text-shadow);
-    --weak-text-shadow: 0px 0px 4px rgba(0,0,0,1);
-    --strong-text-shadow:   1px 1px 2px rgba(0, 0, 0, 1),
-                            3px 3px 4px rgba(0, 0, 0, 0.8),
-                            4px 4px 6px rgba(0, 0, 0, 0.6);
-}
-
 body {
     width: 1920px;
     overflow: hidden;
@@ -34,29 +8,28 @@ body {
 .player {
     font-size: 50px;
     color: white;
-    text-shadow: var(--text-shadow);
+    text-shadow: 0px 0px 4px rgba(0,0,0,1);
 }
 .score {
     font-size: 70px;
-    text-shadow: var(--text-shadow);
 }
 
 .round-info {
     position: absolute;
-    top: var(--round-info-top);
-    left: var(--round-info-left);
+    top: 225px;
     display: flex;
-    flex-direction: column;
-    width: calc(50% - 400px);
+    flex-direction: row;
+    width: calc(100% - 300px);
     justify-content: center;
     align-items: center;
-    font-size: var(--round-info-font-size);
+    font-size: 25px;
     color: white;
-    gap: 5px;
+    gap: 100px;
 }
 .round-info > div {
+    width: 50%;
     height: 30px;
-    text-shadow: var(--text-shadow);
+    text-shadow: 0px 0px 4px rgba(0,0,0,1);
 }
 
 .map-draft, .civ-draft {
@@ -183,7 +156,7 @@ body {
 
 .games {
     position: absolute;
-    top: var(--games-top);
+    top: 490px;
     left: calc(50% - 150px);
     transform: translateX(-50%);
     display: flex;
@@ -217,8 +190,8 @@ body {
 }
 
 .games .game.finished .map {
-    filter: var(--game-finished-filter);
-    opacity: var(--game-finished-opacity);
+    filter: grayscale(40%) brightness(40%);
+    opacity: 0.85;
 }
 .games .game:not(.current) .highlight {
     display: none;
@@ -226,10 +199,10 @@ body {
 .games .game.current .highlight {
     display: block;
     border-radius: 100%;
-    background-color: var(--highlight-color);
-    filter: blur(var(--highlight-blur));
-    width: var(--highlight-size);
-    height: var(--highlight-size);
+    background-color: #EC962A;
+    filter: blur(40px);
+    width: 68%;
+    height: 68%;
     left: 50%;
     transform: translate(-50%, -50%);
     position: absolute;
@@ -239,7 +212,7 @@ body {
     animation: flash ease-in-out 1.2s alternate infinite;
 }
 .games .game.current .map-img {
-    animation: var(--highlight-animation) ease-in-out 1.2s alternate infinite;
+    animation: subtle-expand ease-in-out 1.2s alternate infinite;
 }
 
 .current-game {
@@ -257,16 +230,16 @@ body {
 #lobby-info {
     width: 400px;
     position: absolute;
-    top: var(--lobby-info-top);
-    left: var(--lobby-info-left);
-    font-size: var(--lobby-info-font-size);
+    left: 1290px;
+    font-size: 20px;
     transform: translate(-50%, 0);
     color: white;
-    text-shadow: var(--text-shadow);
+    text-shadow: 0px 0px 4px rgba(0,0,0,1);
     display: flex;
     flex-direction: column;
     align-items: center;
     line-height: 1.2;
+    top: 310px;
 }
 #timer-output {
     font-size: 50px;
@@ -275,5 +248,5 @@ body {
 .talent {
     font-size: 20px;
     color: white;
-    text-shadow: var(--text-shadow);
+    text-shadow: 0px 0px 4px rgba(0,0,0,1);
 }
