--- a/templates/lobby-v2/styles.css
+++ b/templates/lobby-v2/styles.css
@@ -266,6 +266,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     line-height: 1.2;
 }
 #timer-output {
