--- a/templates/scorebug-tennis/styles.css
+++ b/templates/scorebug-tennis/styles.css
@@ -61,6 +61,9 @@
 }
 
 .col.points {
+    text-align: center;
+}
+.col.points div {
     background-color: rgba(134, 125, 0, 0.5);
     color: white;
     text-align: center;
