--- a/templates/lobby-v2/styles.css
+++ b/templates/lobby-v2/styles.css
@@ -19,6 +19,8 @@
     --highlight-size: 95%;
     --highlight-animation: less-subtle-expand;
 
+    --civ-ban-snipe-icon-size: 145px; /* AoE4 93px, AoM 145px. */
+
     --text-shadow: var(--strong-text-shadow);
     --weak-text-shadow: 0px 0px 4px rgba(0,0,0,1);
     --strong-text-shadow:   1px 1px 2px rgba(0, 0, 0, 1),
@@ -139,7 +141,7 @@ body {
     top: 0;
 }
 .civ-ban, .civ-snipe {
-    height: 93px;
+    height: var(--civ-ban-snipe-icon-size);
     top: calc(50% - 2px);
     left: 50%;
     transform: translate(-50%, -50%);
